[package]
name = "review-bee"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "review-bee"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
patchhive-github-pr = { git = "https://github.com/patchhive/patchhive-github-pr.git", rev = "154d0cf92530809c23168ac7d4a88bb67729c3e2", version = "0.1.0" }
patchhive-product-core = { git = "https://github.com/patchhive/patchhive-product-core.git", rev = "67cbd85292d91338e799b967db7a98ee15872e29", version = "0.1.0" }
uuid = { version = "1", features = ["serde", "v4"] }
